add florence to the queue
